tests/cases/fail/dict_get_or_fallback_type.p4
def main() -> None:
    counts: dict[str, int] = {"a": 1}
    print(counts.get_or("x", "bad"))
